saves/test/demo_full_20240802_193545/vector3/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp vector3_tb.v vector3.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
vector3_tb.v:82: $finish called at 80000 (1ps)

iverilog cmd 2 error:

